<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/book_image"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:padding="4dp"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/author_name"
                android:layout_marginEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                />
            <TextView
                android:id="@+id/publisher_name"
                android:layout_marginEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginEnd="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/currency"
                    android:text="@string/inr"/>
                <TextView
                    android:id="@+id/retails_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1000"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>